--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,20 @@
     <script type="text/javascript" src="js/controllers.js"></script>
   </head>
   <body ng-controller="PhoneListCtrl">
-    <ul>
-      <li ng-repeat="phone in phones">
-        {{phone.name}}
-        <p>{{phone.snippet}}</p>
-      </li>
-    </ul>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+          Search: <input ng-model="query">
+        </div>
+        <div class="span10">
+          <ul class="phones">
+            <li ng-repeat="phone in phones | filter: query">
+              {{phone.name}}
+              <p>{{phone.snippet}}</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
