--- a/app/index.html
+++ b/app/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app="zombieApp">
   <head>
     <meta charset="utf-8">
-    <title>My HTML File</title>
+    <title>Zombies</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <script type="text/javascript" src="lib/angular/angular.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
   </head>
-  <body ng-controller="PhoneListCtrl">
+  <body ng-controller="ZombieListCtrl">
+    <h1>Video Game Zombies</h1>
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
           Search: <input ng-model="query">
           Sort by:
           <select ng-model="orderProp">
-            <option value="name">Alphabetical</option>
-            <option value="age">Newest</option>
+            <option value="name">Zombie Name</option>
+            <option value="game">Game</option>
+            <option value="-year">Year</option>
           </select>
         </div>
         <div class="span10">
-          <ul class="phones">
-            <li ng-repeat="phone in phones | filter: query | orderBy: orderProp" class="thumbnail">
-              <a href="#/phones/{{phone.id}}" class="thumb">
-                <img ng-src="{{phone.imageUrl}}">
+          <ul class="zombies">
+            <li ng-repeat="zombie in zombies | filter: query | orderBy: orderProp" class="thumbnail">
+              <a href="#/zombies/{{zombie.id}}" class="thumb">
+                <img ng-src="{{zombie.imageUrl}}">
               </a>
-              <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-              <p>{{phone.snippet}}</p>
+              <a href="#/zombies/{{zombie.id}}">{{zombie.name}}</a>
+              <p>Featured in: {{zombie.game}}</p>
             </li>
           </ul>
         </div>
